--- a/index.html
+++ b/index.html
@@ -55,106 +55,11 @@
 					</div>
 				</div>
 			</div> 
-			<div class="col-12">
-				<div id="data" class="table-scroll my-4">
-					<!-- <div class="table-wrap">
-						<table class="main-table">
-							<thead>
-								<tr>
-									<th rowspan="2" class="fixed-side row-head ptop" scope="col">#</th>
-										<th rowspan="2" class="fixed-side row-head ptop" scope="col">
-											<label class="input-check">
-												<input type="checkbox" name="">
-												<span class="checkmark"></span>
-											</label>
-										</th>
-										<th rowspan="2" class="fixed-side row-head ptop" scope="col">Công việc</th>
-										<th rowspan="2" class="fixed-side row-head ptop" scope="col">Start</th>
-										<th rowspan="2" class="fixed-side row-head ptop" scope="col">Dealine</th>
-										<th rowspan="2" class="fixed-side row-head ptop" scope="col">Người làm</th>
-										<th colspan="14" class="fixed-side row-head" style="text-align: center;" scope="col">
-											<i id="old-month" aria-hidden="true" class="fas fa-angle-left"></i>
-											<span id="date">06/2019</span>
-											<i id="new-month" aria-hidden="true" class="fas fa-angle-right"></i>
-										</th>
-									</tr>
-									<tr>
-										<th scope="col" class="day">We<br>01</th> 
-										<th scope="col" class="day">Th<br>02</th> 
-										<th scope="col" class="day">Fr<br>03</th> 
-										<th scope="col" class="day">Sa<br>04</th> 
-										<th scope="col" class="day">Su<br>05</th> 
-										<th scope="col" class="day">Mo<br>06</th> 
-										<th scope="col" class="day">Tu<br>07</th> 
-										<th scope="col" class="day">We<br>08</th> 
-										<th scope="col" class="day">Th<br>09</th> 
-										<th scope="col" class="day">Fr<br>10</th> 
-										<th scope="col" class="day">Sa<br>11</th> 
-										<th scope="col" class="day">Su<br>12</th> 
-										<th scope="col" class="day">Mo<br>13</th> 
-										<th scope="col" class="day">Tu<br>14</th> 
-										<th scope="col" class="day">We<br>15</th> 
-										<th scope="col" class="day">Th<br>16</th> 
-										<th scope="col" class="day">Fr<br>17</th> 
-										<th scope="col" class="day">Sa<br>18</th> 
-										<th scope="col" class="day">Su<br>19</th> 
-										<th scope="col" class="day">Mo<br>20</th> 
-										<th scope="col" class="day">Tu<br>21</th> 
-										<th scope="col" class="day">We<br>22</th> 
-										<th scope="col" class="day">Th<br>23</th> 
-										<th scope="col" class="day">Fr<br>24</th> 
-										<th scope="col" class="day">Sa<br>25</th> 
-										<th scope="col" class="day">Su<br>26</th> 
-										<th scope="col" class="day">Mo<br>27</th> 
-										<th scope="col" class="day">Tu<br>28</th> 
-										<th scope="col" class="day">We<br>29</th> 
-										<th scope="col" class="day">Th<br>30</th> 
-										<th scope="col" class="day">Fr<br>31</th>
-									</tr>
-								</thead>
-								<tbody class="session">
-									<tr data-toggle="collapse" data-target="#group-of-rows-1" aria-expanded="true" aria-controls="group-of-rows-1" class="clickable">
-										<th class="fixed-side row-head" style="background-color: #ebebeb; color: black; font-weight: normal;" colspan="37">
-											<i aria-hidden="true" style="margin-right: 5px;" class="fas fa-minus"></i>
-											Giai đoạn 1
-										</th>
-									</tr>
-								</tbody>
-								<tbody id="group-of-rows-1" class="stage collapse show" style="">
-
-									<tr>
-										<th class="fixed-side normal">1</th> 
-										<th class="fixed-side normal">
-											<label class="input-check">
-												<input type="checkbox" name="">
-												<span class="checkmark"></span>
-											</label>
-										</th> 
-										<th class="fixed-side normal">Liên hệ đơn vị cartering</th> 
-										<th class="fixed-side normal">01/05/2019</th>
-										<th class="fixed-side normal">05/05/2019</th> 
-										<th class="fixed-side normal"></th> 
-										<td class="Normal"></td> 
-										<td class="Normal"></td> 
-										<td class="Normal"></td> 
-										<td class="Normal"></td> 
-										<td class="Normal"></td> 
-										<td class="Normal"></td> 
-										<td></td> 
-										<td></td> 
-										<td></td> 
-										<td></td> 
-										<td></td> 
-										<td></td> 
-										<td></td> 
-										<td></td> 
-										<td></td> <td></td> <td></td> <td></td> <td></td> <td></td> <td></td> <td></td> <td></td> <td></td> <td></td> <td></td> <td></td> <td></td> <td></td> <td></td> <td></td>
-									</tr>
-									
-								</tbody>
-							</table>
-						</div>
-					</div> -->
+			<div class="col-12 main-data">
+				<div id="data" class="table-scroll my-4 data">
+				</div>
+				<div id="loading" class="loading">
+					<img src="images/loading.gif">
 				</div>
 			</div>
 		</div>
