--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			<div class="col-12">
 				<div class="top">
 					<div class="left">
-						<h3 id="description" class="title"><i aria-hidden="true" class="far fa-check-circle"></i>Vụ mùa cà chua</h3>
+						<h3 id="description" class="title"><i aria-hidden="true" class="far fa-check-circle"></i>Chưa có dữ liệu</h3>
 					</div>
 					<div class="right">
 						<div class="view">
@@ -56,7 +56,7 @@
 				</div>
 			</div> 
 			<div class="col-12 main-data">
-				<div id="data" class="table-scroll my-4 data">
+				<div id="data" class="table-scroll my-2 data">
 				</div>
 				<div id="loading" class="loading">
 					<img src="images/loading.gif">
